# beauty-classifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  report.rar  test_feedback_impact.sh
.dvc/: config
.github/workflows/: delpoy-back.yaml
.infra/: .dockerignore  Dockerfile  docker-compose.mlflow.yml  docker-compose.yml
.infra/dashboards/: fastapi-observability.json
.infra/grafana/: datasources.yml
alembic/: env.py
alembic/versions/: 13d4d40b3276_add_celebrity_feedback_table.py  3c010f0556f3_add_updated_at_to_all_tables.py  54afea78c6bb_inference_add_timestamp_make_user_id_.py  808c50f05c6b_.py
datasets/: .gitignore  analyze-ofpf.ipynb  celebrities_pretty.dvc  get_pretty_faces.py  open_famous_people_faces.dvc
docs/: .gitignore  presentation.tex
models/: attractiveness_classifier.pt.dvc  celebrity_matcher.pt.dvc
report/: report.aux  report.out  report.tex
src/: config.py
src/application/services/: __init__.py  crud.py  feedback.py  ml.py  security.py  user.py
src/config/: config.py  logconf.py
src/infrastructure/database/: core.py
src/infrastructure/database/models/: __init__.py  base.py  public.py
src/infrastructure/ml_models/: __init__.py
src/infrastructure/ml_models/attractiveness/: model.py
src/infrastructure/ml_models/rl/: __init__.py  agent.py
src/infrastructure/ml_models/similarity/: __init__.py  (+2 more)
src/infrastructure/repositories/: __init__.py  celebrity.py  crud.py  feedback.py  inference.py  user.py
src/interfaces/cli/: __main__.py
static/: index.html
tests/: TESTING.md
tests/unit/: test_rl_agent.py
(+18 files in other folders)
